--- a/css/thailand.css
+++ b/css/thailand.css
@@ -114,7 +114,7 @@ tr:nth-child(2n+1) {
 }
 
 /*logo*/
-[class^="icon-"], [class*=" icon-"]{ color: #f7904d;}
+[class^="icon-"], [class*=" icon-"]{ color: #64161d;}
 
 /*L kasten links*/
 .mainNavOdc,.headerODM,.contentNavigation{background:#64161d;}
